
  [Ludovic Claude]
  * d/control:
    - Update Standards-Version to 3.9.2, no changes
  * d/rules: move 'unpatch all POM files' to
    cleanbuilddir target to restore all files to their pristine
    state after building.
  * share/perl/maven.pm: Apply patch to port share/cdbs/1/class/maven.mk to dh.
    Patch made by Steve Langasek <vorlon@debian.org>

  [Thomas Koch]
  * code refactorings and cleanup

  [Hilko Bengen]
  * mh_make: Do not use sudo (Closes: #703382)

 -- Ludovic Claude <ludovic.claude@laposte.net>  Sun, 06 May 2012 23:54:00 +0200

maven-debian-helper (1.5.1) unstable; urgency=low

  * d/control: update version constraint on maven-repo-helper
    (Closes: #657889)
  * Update the build to use junit 4
  * Refactor code in maven-packager-util and fix reading of output
    from dpkg and apt-file
  * Keep improving usability of mh_make (Closes: #638782, #641266)
  * Remove Michael Koch from the list of uploaders. Thanks for your
    work! (Closes: #654110)
  * Remove BSD license from the list of licenses stored in
    /usr/share/common-licenses (Closes: #641301)
  * When the jar is installed in /usr/share/java, use symlinks in the
    repository to avoid duplication of the jar contents (Closes: #665799)
  * Rename plugin maven-debian-plugin as debian-maven-plugin to adhere to
    Maven naming conventions.

 -- Ludovic Claude <ludovic.claude@laposte.net>  Fri, 04 May 2012 00:51:14 +0200

maven-debian-helper (1.5) unstable; urgency=low

  [ Ludovic Claude ]
  * Install jars in /usr/share/java (Closes: #636660)
  * Now requires Java 1.5 or better to compile and run.
  * Remove velocity.log after running mh_make (Closes: #641261)
  * SysInstallMojo: read classifier and java-lib parameters.
  * mh_make: upgrade Standard-Version (Closes: #641302)
  * mh_make: clean up Debian emails of the form My Name<my.name@provider.com>
    (Closes: #638788)
  * mh_make: fix description in generated maven.rules (Closes: #639637)